# axon

./: .clang-tidy  .clangd  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  function_approximation.cpp
include/: network.hpp  neuron.hpp
src/: CMakeLists.txt  activation.hpp  main.cpp  network.cpp  neuron.cpp  neuron.hpp
tests/: CMakeLists.txt  criterion_test.cpp  network_test.cpp
